ecmascript/parser/tests/test262-error-references/fail/983987033f0e1170.js.stderr
error: Unexpected token None
 --> $DIR/tests/test262-parser/fail/983987033f0e1170.js:1:1
  |
1 | **
  | ^^

error: TS1109
 --> $DIR/tests/test262-parser/fail/983987033f0e1170.js:1:1
  |
1 | **
  | ^^

